// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link displays arrow icon when \`arrow\` is specified 1`] = `
<Link
  arrow="arrow"
>
  <A
    className="link"
    target={null}
  >
    <a
      className="link"
    >
      text
      <Icon
        className="arrow"
        icon="arrow"
      >
        <Imported
          className="arrow"
        >
          <ReactImportedComponent
            className="arrow"
            loadable={
              Object {
                "done": false,
                "importFunction": [Function],
                "load": [Function],
                "mark": Array [],
                "ok": false,
                "payload": undefined,
                "promise": Promise {},
                "reset": [Function],
              }
            }
            render={[Function]}
          >
            <UnconnectedReactImportedComponent
              async={false}
              className="arrow"
              exportPicker={[Function]}
              loadable={
                Object {
                  "done": false,
                  "importFunction": [Function],
                  "load": [Function],
                  "mark": Array [],
                  "ok": false,
                  "payload": undefined,
                  "promise": Promise {},
                  "reset": [Function],
                }
              }
              render={[Function]}
              streamId={0}
            >
              <img
                className="arrow"
                src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              />
            </UnconnectedReactImportedComponent>
          </ReactImportedComponent>
        </Imported>
      </Icon>
    </a>
  </A>
</Link>
`;

exports[`Link displays back arrow icon when \`backArrow\` is specified 1`] = `
<Link
  backArrow="arrow_darkBg"
>
  <A
    className="link"
    target={null}
  >
    <a
      className="link"
    >
      <Icon
        className="backArrow"
        icon="arrow_darkBg"
      >
        <Imported
          className="backArrow"
        >
          <ReactImportedComponent
            className="backArrow"
            loadable={
              Object {
                "done": false,
                "importFunction": [Function],
                "load": [Function],
                "mark": Array [],
                "ok": false,
                "payload": undefined,
                "promise": Promise {},
                "reset": [Function],
              }
            }
            render={[Function]}
          >
            <UnconnectedReactImportedComponent
              async={false}
              className="backArrow"
              exportPicker={[Function]}
              loadable={
                Object {
                  "done": false,
                  "importFunction": [Function],
                  "load": [Function],
                  "mark": Array [],
                  "ok": false,
                  "payload": undefined,
                  "promise": Promise {},
                  "reset": [Function],
                }
              }
              render={[Function]}
              streamId={0}
            >
              <img
                className="backArrow"
                src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              />
            </UnconnectedReactImportedComponent>
          </ReactImportedComponent>
        </Imported>
      </Icon>
      text
    </a>
  </A>
</Link>
`;

exports[`Link is active route 1`] = `
<Link
  activeClassName="active"
  to="/deployments"
>
  <NavLink
    activeClassName="active"
    aria-current="page"
    className="link"
    target={null}
    to="/deployments"
  >
    <Route
      path="\\\\/deployments"
    >
      <Link
        aria-current={null}
        className="link"
        replace={false}
        target={null}
        to="/deployments"
      >
        <a
          aria-current={null}
          className="link"
          href="/deployments"
          onClick={[Function]}
          target={null}
        >
          text
        </a>
      </Link>
    </Route>
  </NavLink>
</Link>
`;

exports[`Link is external url - http 1`] = `
<Link
  to="https://www.astronomer.io"
>
  <A
    className="link"
    target={null}
    to="https://www.astronomer.io"
  >
    <a
      className="link"
      href="https://www.astronomer.io"
      target="_blank"
    >
      text
    </a>
  </A>
</Link>
`;

exports[`Link is external url - naked 1`] = `
<Link
  to="astronomer.io"
>
  <A
    className="link"
    target={null}
    to="astronomer.io"
  >
    <a
      className="link"
      href="astronomer.io"
      target="_blank"
    >
      text
    </a>
  </A>
</Link>
`;

exports[`Link is external url - www 1`] = `
<Link
  to="www.astronomer.io"
>
  <A
    className="link"
    target={null}
    to="www.astronomer.io"
  >
    <a
      className="link"
      href="www.astronomer.io"
      target="_blank"
    >
      text
    </a>
  </A>
</Link>
`;

exports[`Link is internal route - no slash 1`] = `
<Link
  to="deployments"
>
  <Link
    className="link"
    replace={false}
    target={null}
    to="deployments"
  >
    <a
      className="link"
      href="deployments"
      onClick={[Function]}
      target={null}
    >
      text
    </a>
  </Link>
</Link>
`;

exports[`Link is internal route - with slash 1`] = `
<Link
  to="/deployments"
>
  <Link
    className="link"
    replace={false}
    target={null}
    to="/deployments"
  >
    <a
      className="link"
      href="/deployments"
      onClick={[Function]}
      target={null}
    >
      text
    </a>
  </Link>
</Link>
`;

exports[`Link renders correctly 1`] = `
<Link>
  <A
    className="link"
    target={null}
  >
    <a
      className="link"
    >
      text
    </a>
  </A>
</Link>
`;
